--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,15 +106,12 @@ if(USE_NEW_ARCH)
   add_subdirectory(3rdparty/pybind11)
   add_subdirectory(lightseq/csrc/kernels/${DEVICE_ARCHITECTURE})
   add_subdirectory(lightseq/csrc/lsflow)
-  add_subdirectory(lightseq/csrc/ops_new)
-  add_subdirectory(lightseq/csrc/layers_new)
-  add_subdirectory(lightseq/csrc/proto)
-  add_subdirectory(lightseq/csrc/models)
-  add_subdirectory(lightseq/csrc/example)
-  add_subdirectory(lightseq/csrc/pybind)
-  if(USE_TRITONBACKEND)
-    add_subdirectory(lightseq/csrc/triton_backend)
-  endif()
+  # add_subdirectory(lightseq/csrc/ops_new)
+  # add_subdirectory(lightseq/csrc/layers_new)
+  # add_subdirectory(lightseq/csrc/proto) add_subdirectory(lightseq/csrc/models)
+  # add_subdirectory(lightseq/csrc/example)
+  # add_subdirectory(lightseq/csrc/pybind) if(USE_TRITONBACKEND)
+  # add_subdirectory(lightseq/csrc/triton_backend) endif()
 
 else()
 
