--- a/lightseq/csrc/proto/CMakeLists.txt
+++ b/lightseq/csrc/proto/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package(Protobuf REQUIRED)
 include_directories(${Protobuf_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-set(PROTO_FILES bert.proto bert_crf.proto transformer.proto gpt.proto llama.proto)
+set(PROTO_FILES bert.proto bert_crf.proto transformer.proto gpt.proto)
 
 set(WEIGHT_FILES bert_weight.cc bert_crf_weight.cc transformer_weight.cc
                  gpt_weight.cc llama_weight.cc)
