Llama develop (speedup 2.x) (#504)
* llama develop

* format

* llama rms layer norm

* finish llama kernel develop

* llama op develop

* llama develop

* format

* llama develop

* llama export

* llama export develop

* llama develop

* llama develop

* llama rotary fuse kernel

* llama fuse transpose and rotary position emb

* llama develop

* llama develop

* llama develop

* llama develop

* llama develop

* llama develop

* adapt export

* llama develop

* llama develop

* format

--- a/lightseq/csrc/ops_new/CMakeLists.txt
+++ b/lightseq/csrc/ops_new/CMakeLists.txt
@@ -1,18 +1,23 @@
 set(operator_files
+    act_elewise_product.cpp
     beam_search_topk.cu
-    sampling.cc.cu
     bias_act_dropout.cpp
     bias_add_transform_20314.cpp
     bias_dropout_residual.cpp
     concat3_dim1.cpp
     crf.cpp
     dropout.cpp
+    fuse_add2_op.cpp
     launch_dec_emb_op.cpp
     launch_enc_emb.cpp
     launch_gpt_emb.cpp
+    launch_llama_emb.cpp
     layer_normalize.cpp
     split_head_op.cpp
     linear.cpp
+    rms_layer_norm.cpp
+    fuse_rotary_position_qkv.cpp
+    sampling.cc.cu
     softmax.cpp
     strided_batch_gemm.cpp
     transform_0213.cpp)
