--- a/lightseq/csrc/models/CMakeLists.txt
+++ b/lightseq/csrc/models/CMakeLists.txt
@@ -1,5 +1,12 @@
-add_library(liblightseq SHARED bert.cc bert_crf.cc transformer.cu gpt.cc
-                               llama.cc model_util.cc)
+add_library(
+  liblightseq SHARED
+  bert.cc
+  bert_crf.cc
+  transformer.cu
+  gpt.cc
+  llama.cc
+  model_util.cc
+  model_base.cc)
 
 target_link_libraries(liblightseq PUBLIC lightseq_layers)
 
